# procgenlib

./: .gitignore  CHANGELOG.md  README.md  examples.ipynb  pyproject.toml  setup.cfg
.github/workflows/: pages.yaml
doc/: conf.py  index.rst  procgenlib.input.elevmodel.rst  procgenlib.synthesis.rst
procgenlib/input/: elevmodel.py
tests/: test_diamond_square.py
worldgenlib/synthesis/: _diamond_square.py
