[metadata]
name = worldgenlib
version = attr: worldgenlib.VERSION
description = Utilities for procedural generation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/mcejp/worldgenlib
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    numpy
packages = worldgenlib
python_requires = >=3.9

[options.extras_require]
dev =
    black
    mypy
    pytest
